salesforce/force-app/main/default/objects/Document_Uploaded__e/Document_Uploaded__e.object-meta.xml
<CustomObject>
    <description>Published after a supplier uploads a compliance document via the portal. Triggers AIExtractionQueueable via the Document_Upload_Event_Handler flow.</description>
    <label>Document Uploaded</label>
    <pluralLabel>Document Uploaded</pluralLabel>
</CustomObject>