salesforce/force-app/main/default/objects/Document_Uploaded__e/fields/Compliance_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Document_Id__c</fullName>
    <description>Salesforce Id of the Compliance_Document__c record created for this upload</description>
    <label>Compliance Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>