salesforce/force-app/main/default/objects/Document_Uploaded__e/fields/Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_Id__c</fullName>
    <description>Salesforce Id of the ContentVersion (latest) for the uploaded file — used by AIExtractionQueueable to read VersionData</description>
    <label>Content Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>