salesforce/force-app/main/default/objects/Document_Uploaded__e/fields/Document_Type_Hint__c.field-meta.xml
<CustomField>
    <fullName>Document_Type_Hint__c</fullName>
    <description>Document type hint passed from the LWC (e.g. ISO_9001, MSDS) to help the AI extraction pipeline classify the document</description>
    <label>Document Type Hint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>