salesforce/force-app/main/default/objects/Document_Uploaded__e/fields/Supplier_Id__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Id__c</fullName>
    <description>Salesforce Id of the supplier Account record</description>
    <label>Supplier Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>